--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,10 @@
   "authors": [
     {
       "name": "linyang",
-      "email": "linyang@offcn.com"
+      "email": "linyangflash@163.com"
     },
     {
-      "name": "chenqionghe",
-      "email": "chenqionghe@offcn.com"
+      "name": "chenqionghe"
     }
   ],
   "license": "MIT",
