--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     }
   },
   "require": {
-    "php": ">=5.3"
+    "php": ">=5.3",
+    "monolog/monolog": "1.24.0"
   },
   "autoload": {
     "psr-4": {
